# adlp-validator-clean

./: GOVERNANCE.md  LICENCE  README.md  pyproject.toml
.github/workflows/: adlp-ci.yml
adlp_validator/: canonical.py  cli.py  registry_loader.py  report.py  validator.py
adlp_validator/adlp_validator/: cli.py
docs/: adlp_registry_v1.6.0.json  index.html  packet-format.md  protocol.md  registry.html  registry.md  validator.html
examples/: invalid_packet_01.json  invalid_packet_02.json  valid_packet_01.json
examples/invalid/: invalid_packet_01.json  invalid_packet_02  invalid_packet_02.json
examples/valid/: valid_packet_01.json
registry/: adlp_registry_v1.1.0.json  adlp_registry_v1.2.0.json  adlp_registry_v1.4.0.json  adlp_registry_v1.5.0.json  adlp_registry_v1.6.0.json
schemas/: adlp_packet_schema.json  packet_schema_v1.json
tools/mapping_helper/: README.md  adlp_mapping_helper_v2.py  device_errors_sample.csv
website/: index.html  registry.html  validator.html
